--- a/contact.styles.css
+++ b/contact.styles.css
@@ -3,8 +3,8 @@
   --primary-font: "Rajdhani", sans-serif;
   --primary-font-color: #fefefe;
   --btn-text-color: #f9f9f9;
-  --footer-color: #44558b;
-  --purple-btn: #785987;
+  --light-blue: #44558b;
+  --light-purple: #785987;
   --primary-link-color: #eeeded;
   --links-font: "Titillium Web", sans-serif;
 }
@@ -110,7 +110,7 @@ label {
 }
 
 .form__submit {
-  background-color: var(--purple-btn);
+  background-color: var(--light-purple);
   grid-column: 2/3;
   width: 33%;
   justify-self: end;
@@ -149,7 +149,7 @@ footer {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  background-color: var(--footer-color);
+  background-color: var(--light-blue);
   color: var(--primary-link-color);
   position: fixed;
   left: 0;
