--- a/contact.styles.css
+++ b/contact.styles.css
@@ -32,6 +32,12 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+
+  background-image: url(./img/lines.svg);
+  background-repeat: no-repeat;
+  background-position-y: 10%;
+  background-position-x: 0%;
+  background-size: auto;
 }
 
 .navbar {
