fixed footer and pricing text

--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@
   --light-blue: #44558b;
   --bg-color: #2c4177;
   --blue-circle: #2c4ab6;
+  --footer-color: #44558B;
 
   --primary-font: "Rajdhani", sans-serif;
   --links-font: "Titillium Web", sans-serif;
