--- a/styles.css
+++ b/styles.css
@@ -77,7 +77,6 @@ a {
 
 a:hover {
   opacity: 0.75;
-  background: none !important;
 }
 
 .main {
@@ -228,12 +227,20 @@ a:hover {
   justify-content: space-around;
 }
 
+.topnav__logo-link:hover{
+  background: none;
+}
+
+.topnav__logo-link img {
+  background: none;
+}
+
 .topnav a {
   font-size: 18px;
   padding: 1rem 2rem;
 }
 
-.topnav a:hover {
+.topnav__link:hover {
   background: var(--light-blue);
   border-radius: 5px;
   transition: all 500ms;
@@ -407,6 +414,7 @@ li:before {
 
 .price button:hover {
   opacity: 0.75;
+  cursor: pointer;
 }
 
 /* About Section Styles */
